--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",  
+    "dev": "nodemon index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-     "postinstall": "npm run prisma:generate"
+    "postinstall": "npm run prisma:generate"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.1.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -24,7 +25,7 @@
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",  
-    "prisma": "^6.1.0"    
+    "nodemon": "^3.1.0",
+    "prisma": "^6.1.0"
   }
 }
