--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
         "src": "/(.*)",
         "dest": "index.js"
       }
-    ]
+    ],
+    "scripts": {
+      "postbuild": "npm run prisma:migrate"
+    }
   }
