--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,7 @@
          "appUrl":"https://mresnicoff.github.io/misnoticias/",
    "POSTGRES_PRISMA_URL":"postgres://postgres.kgqsdhfvpourbhelvprz:gym2FoQZSHbtKEsV@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
     },
-    "scripts": {
-      "postbuild": "npm run prisma:migrate"
-    }
+    "buildCommand": "npm run prisma:migrate && npm run build"
+    
   }
 }
