--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/(.*)", "dest": "index.js" }
+    { "src": "/(.*)", "dest": "index.js", 
+    "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"] }
   ],
   "build": {
     "env": {
